# blink-mini-re

./: .gitignore  .gitmodules  Untitled.ipynb  bin-analysis.ipynb  bridge-text-finding.ipynb  firmware-ab-offset.ipynb  flake.nix  flash-loop.sh  fresh_binaries.ipynb  fresh_binary_diffs.ipynb  pyproject.toml  shell.sh  string-offsets.ipynb
blink-re.rep/: project.prp  projectState
blink-re.rep/idata/00/: 00000003.prp  00000007.prp  00000008.prp
blink-re.rep/user/00/: 00000000.prp
blink-re.rep/user/00/~00000000.db/: db.1.gbf
docker-shell/: Dockerfile
notes/: binwalk-invalid.txt  binwalk-opcodes.txt  binwalk.txt  blink-companies.drawio  long-loads.txt  rbasefind.txt  strings.txt  which-isa.md
